[gd_scene load_steps=23 format=2]

[ext_resource path="res://gui/screens/single_player_intro/SinglePlayerIntroduction.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/final_boss/giga-omi/assets/omi-and-gigaomi-sheet.png" type="Texture" id=2]
[ext_resource path="res://gui/screens/single_player_intro/assets/parallax-mountain-montain-far.png" type="Texture" id=3]
[ext_resource path="res://gui/screens/single_player_intro/assets/parallax-mountain-trees.png" type="Texture" id=4]
[ext_resource path="res://gui/screens/single_player_intro/assets/parallax-mountain-bg.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/single_player_intro/assets/parallax-mountain-foreground-trees.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/single_player_intro/assets/parallax-mountain-mountains.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/main_menu/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://gui/screens/main_menu/assets/GUI.png" type="Texture" id=9]
[ext_resource path="res://music/Pixel 1.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Omi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Omi:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide_omi"
tracks/0/type = "value"
tracks/0/path = NodePath("Omi:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "omi_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Omi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Omi:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_omi"
tracks/0/type = "value"
tracks/0/path = NodePath("Omi:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/Layer1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParallaxBackground/Layer2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParallaxBackground/Layer3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ParallaxBackground/Layer4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ParallaxBackground/Layer5:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Omi:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/Layer1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParallaxBackground/Layer2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParallaxBackground/Layer3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ParallaxBackground/Layer4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ParallaxBackground/Layer5:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Omi:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/Layer1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParallaxBackground/Layer2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParallaxBackground/Layer3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ParallaxBackground/Layer4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ParallaxBackground/Layer5:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 9 )
region_rect = Rect2( 145, 113, 46, 14 )
modulate_color = Color( 1, 0.976471, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 9 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 144.803, 80.9569, 46.1913, 13.5561 )

[sub_resource type="StreamTexture" id=12]

[node name="SinglePlayerIntroduction" type="Node2D"]
pause_mode = 2
modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
pause_mode = 2

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 7.059, 7.059 )
texture = ExtResource( 5 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer2"]
scale = Vector2( 7.059, 7.059 )
texture = ExtResource( 6 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 7.059, 7.059 )
texture = ExtResource( 3 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 7.059, 7.059 )
texture = ExtResource( 7 )
centered = false

[node name="Layer5" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0, 0, 0, 1 )
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer5"]
scale = Vector2( 7.059, 7.059 )
texture = ExtResource( 4 )
centered = false

[node name="Omi" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 960, 540 )
scale = Vector2( 20, 20 )
texture = ExtResource( 2 )
flip_h = true
hframes = 8
vframes = 18

[node name="OmiAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hide_omi = SubResource( 3 )
anims/omi_idle = SubResource( 2 )
anims/show_omi = SubResource( 4 )

[node name="ScreenAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 7 )

[node name="SkipButton" type="Button" parent="."]
pause_mode = 2
physics_interpolation_mode = 2
margin_left = 1554.0
margin_top = 47.0
margin_right = 1874.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Skip Intro"
icon = SubResource( 12 )

[connection signal="animation_finished" from="OmiAnimator" to="." method="_on_OmiAnimator_animation_finished"]
[connection signal="animation_finished" from="ScreenAnimator" to="." method="_on_ScreenAnimator_animation_finished"]
[connection signal="pressed" from="SkipButton" to="." method="_on_LocalCampaignBtn_pressed"]
